tooling/nargo_cli/tests/snapshots/execution_success/main_bool_arg/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u1, v1: [u1; 2]):
    (no terminator instruction)
}
